2010-07-02  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * doc/geany.txt, doc/geany.html:
   Fix wording - restarting is required for hidden prefs.
   File templates don't need manual reloading anymore.


2010-07-01  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/printing.c, doc/geany.txt, doc/geany.html:
   Always use white background color when printing (except for text
   with a white foreground) to save ink (should fix #2968998).
 * src/build.c, src/build.h, doc/geany.txt, doc/geany.html:
   Limit build error editor indicators to 50, but parse all errors in
   the Compiler tab (fixes #3019823).


2010-06-30  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/highlighting.c:
   Re-enable fold.comment for the C lexer - it was disabled to prevent
   //{ explicit folding, but that also disables stream comments /* */.
 * tagmanager/tm_workspace.c, tagmanager/get.c:
   Use g_free instead of free (patch by Daniel Marjamäki, thanks).


2010-06-18  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/plugindata.h, src/plugins.c, doc/plugins.dox:
   Fix not loading plugins built against a newer API when Geany doesn't
   provide the required version given in PLUGIN_VERSION_CHECK().
   Improve documentation for PLUGIN_VERSION_CHECK().
 * plugins/filebrowser.c:
   Allow Find in Files when no items are selected.


2010-06-16  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/notebook.c:
   Align notebook tab close buttons centred vertically - thanks to
   Robux.Biz (galyuk).


2010-06-12  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * po/POTFILES.skip:
   Add doc/stash-example.c to fix 'make distcheck'.
 * geany.nsi:
   Change the RequestExecutionLevel for the Windows installer to
   'highest'.
 * New release: Geany 0.19 "Vellam".


2010-06-10  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/editor.c:
   Group undo action for Insert Multiline Comment.

